changed config to have proper url

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: "Euclidean Geometry &bull; Math 3600"
 description: "Course Page for UNI Math 3600, Fall 2014"
 
-url: "http://theronhitchman.github.io"
+url: "http://theronhitchman.github.io/euclidean-geometry"
 
 paginate: 10
 
