changed navbar settings

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: "Euclidean Geometry &bull; Math 3600"
+name: "Euclidean Geometry"
 description: "Course Page for UNI Math 3600, Fall 2014"
 
 url: "http://theronhitchman.github.io/euclidean-geometry"
