wrote files for ibl, ggb pages, empty files for others

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "Euclidean Geometry"
-description: "Course Page for UNI Math 3600, Fall 2014"
+description: "Course Page for UNI Math 3600"
 
 url: "http://theronhitchman.github.io/euclidean-geometry"
 
