changed highlighter to rouge

--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ url: "http://theronhitchman.github.io/euclidean-geometry"
 paginate: 10
 
 markdown: kramdown
-highlighter: rouge
+highlighter: pygments
