--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
-name:         "Euclidean Geometry"
-description:  "Course Page for UNI Math 3600"
+name:          "Euclidean Geometry"
+description:   "Course Page for UNI Math 3600"
+email:         theron.hitchman@uni.edu
 
-url:          "http://theronhitchman.github.io/euclidean-geometry"
+url:           "http://theronhitchman.github.io/euclidean-geometry"
 
-paginate:     10
+paginate:      10
 
-markdown:     kramdown
-highlighter:  rouge
+markdown:      kramdown
+permalink:     pretty
+highlighter:   pygments
