--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ name:          "Euclidean Geometry"
 description:   "Course Page for UNI Math 3600"
 email:         theron.hitchman@uni.edu
 
-url:           "http://theronhitchman.github.io"
-baseurl:       "/euclidean-geometry"
+url:           "http://theronhitchman.github.io/euclidean-geometry"
 paginate:      10
 
 markdown:      kramdown
