--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,12 @@
 name:          "Euclidean Geometry"
 description:   "Course Page for UNI Math 3600"
 email:         theron.hitchman@uni.edu
+github_username: "theronhitchman"
+twitter_username: "@ProfNoodlearms"
+plus_username:  "+TheronHitchman"
 
-url:           "http://theronhitchman.github.io/euclidean-geometry"
+url:           "http://theronhitchman.github.io"
+baseurl:       "/euclidean-geometry"
 paginate:      10
 
 markdown:      kramdown
